--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.data.rest.base-path=/api
 spring.datasource.url=jdbc:postgresql://localhost:5432/open_lmis
 spring.datasource.username=postgres
 spring.datasource.password=p@ssw0rd
+
+spring.jpa.show-sql=true
