Add POC code for ExtraData using jsonb column

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.rest.base-path=/api
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/open_lmis
+spring.datasource.url=jdbc:postgresql://localhost:5432/open_lmis?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=p@ssw0rd
 
